[package]
name = "grammarsmith"
version = "0.1.0"
edition = "2021"
description = "Common helpers for handwriting writing lexers and parsers."
repository = "https://github.com/honungsburk/grammarsmith"
license-file = "LICENSE"
readme = "README.md"
keywords = ["parser", "lexer"]
categories = ["development-tools"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
proptest = "1.6.0"
