[package]
name = "grammarsmith"
version = "0.1.0"
edition = "2021"
description = "Common helpers for handwriting lexers and parsers."
repository = "https://github.com/honungsburk/grammarsmith"
license-file = "LICENSE"
readme = "README.md"
keywords = ["parser", "lexer"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.6.0"
